--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -123,7 +123,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center 15%;
+  object-position: center top;
   border-radius: 50%;
   position: relative;
   z-index: 2;
